feat: completa módulo de ventas con pruebas unitarias y manejo de errores robusto